--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="div-header">
       <h1>
         <img
-          src="C:\Users\50683\Desktop\api\Sin título.jpg"
+          src="https://github.com/escuelamanjosanchezlimon/admineduvial/blob/main/loguito.jpg?raw=true"
           alt="Descripción de la imagen"
           style="height: 30px"
         />
