--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Administrador</title>
-    <link rel="icon" href="https://github.com/AlbinJunLiang/app-eduvial/blob/main/mainIco.png?raw=true" type="image/png">
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="https://github.com/adminsanchez2025/ico-eduvial/blob/main/mainIco.png?raw=true" type="image/x-icon">
+
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -15,7 +16,7 @@
     <div class="div-header">
       <h1>
         <img
-          src="https://github.com/escuelamanjosanchezlimon/admineduvial/blob/main/loguito.jpg?raw=true"
+          src="C:\Users\50683\Desktop\api\Sin título.jpg"
           alt="Descripción de la imagen"
           style="height: 30px"
         />
@@ -54,12 +55,8 @@
         <div class="key-box">
           <div id="div-new-actual">        
             <input type="text" id="id-actual-key" class="input"  required>
-      <label  id="etiqueta1" for="id-actual-key">Ingresa la clave actual</label></div>
+      <label  id="etiqueta1" for="id-actual-key">Ingresa la nueva clave</label></div>
 
-      <div id="div-new-key">    
-        <input type="text" id="id-new-key" class="input"  required>
-        <label id="etiqueta2" for="id-new-key">Ingresa la nueva clave</label>
-</div>
           
 
           <button id="update" type="submit" class="btn-update">Actualizar</button>
@@ -73,6 +70,6 @@
 
     <div class="div-final">Usuario Administrador</div>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
-    <script src="script.js"></script>
+    <script src="a.js"></script>
   </body>
 </html>
