--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
 
     <div class="div-final">Usuario Administrador</div>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
-    <script src="a.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
