--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="div-header">
       <h1>
         <img
-          src="C:\Users\50683\Desktop\api\Sin título.jpg"
+          src="https://github.com/AlbinJunLiang/eduvial-archivos/blob/main/Title_o.jpg?raw=true"
           alt="Descripción de la imagen"
           style="height: 30px"
         />
